# mari

./: .gitignore  CMakeLists.txt  README.md  TODO.md  camera.cpp  camera.hpp  compile.bat  compileShaders.bat  device.cpp  device.hpp  game_object.hpp  keyboard_controller.cpp  keyboard_controller.hpp  main.cpp  mari.cpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  simple_render_system.cpp  simple_render_system.hpp  swapchain.cpp  swapchain.hpp  window.cpp  window.hpp
shaders/: point_light.frag  point_light.vert  simple.frag  simple.vert
source/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  device.hpp  frame_info.hpp  game_object.cpp  game_object.hpp  keyboard_controller.cpp  mari.cpp  mari.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  simple_render_system.cpp  simple_render_system.hpp  swapchain.hpp  utils.hpp  window.cpp
source/systems/: point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp
